אנג'ליק, אימא שלה, ראשל, ילדים חד הוריים, מישל דגונדרי ותיקונים

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@ Error message and password prompt
 
 <li>אחיות חוץ</li>
 
+<li>אחיות לחושן</li>
+
+<li>אימא מהאגדות</li>
+
 <li>אימא שלי</li>
 
 <li>אימא, סבתא ואני</li>
@@ -413,6 +417,8 @@ Error message and password prompt
 
 <li>יויו וגורה</li>
 
+<li>ילדים חד הוריים</li>
+
 <li>ים טתיס</li>
 
 <li>ירקות קלויים</li>
@@ -467,6 +473,8 @@ Error message and password prompt
 
 <li>מיצפרש</li>
 
+<li>מישל גונדרי</li>
+
 <li>מלפפונים חמוצים</li>
 
 <li>ממשיכים לדמם</li>
@@ -498,6 +506,8 @@ Error message and password prompt
 <li>משתדלים לא להגזים</li>
 
 <li>מתכוני ארוחת הכריסמס</li>
+
+<li>נאמני הגנזך</li>
 
 <li>נדיה</li>
 
@@ -8356,7 +8366,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;מונמרטרה&quot;,
+            &quot;text&quot;: &quot;data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2060%2030%22%20width%3D%221200%22%20height%3D%22600%22%3E%0A%3CclipPath%20id%3D%22t%22%3E%0A%09%3Cpath%20d%3D%22M30%2C15%20h30%20v15%20z%20v15%20h-30%20z%20h-30%20v-15%20z%20v-15%20h30%20z%22%2F%3E%0A%3C%2FclipPath%3E%0A%3Cpath%20d%3D%22M0%2C0%20v30%20h60%20v-30%20z%22%20fill%3D%22%2300247d%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20stroke%3D%22%23fff%22%20stroke-width%3D%226%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20clip-path%3D%22url(%23t)%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%224%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23fff%22%20stroke-width%3D%2210%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%226%22%2F%3E%0A%3C%2Fsvg%3E%0A&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8468,7 +8478,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אבא יואל]] [[דינה ז&quot;ל]] יויו [[בחוות החיות]] נדיה גורה קרן גיגי [[שאלון האחיות]] [[משפחת באומן]]" title="$:/StoryList">
+<div list="[[אימא מהאגדות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8488,7 +8498,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170608211301126" title="$:/temp/search">
+<div created="20161023184814872" modified="20170616195858867" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8621,14 +8631,14 @@ Error message and password prompt
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
 </div>
-<div created="20170608165812345" modified="20170608213231192" tags="[[משפחת באומן]]" title="אבא יואל">
+<div created="20170608165812345" modified="20170609063510483" tags="[[משפחת באומן]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
 
 אבא יואל באומן, מאז נפטרה [[אימנו|דינה ז&quot;ל]], מגיע בגוש אחד עם רעייתו היקרה - באמת היקרה - תרצה באומן.
 
-אני מאד מסמפט את תרצה, שהפכה את אבא לאדם נסבל וסובלני הרבה יותר ממה שהיה.
+אני מאד מסמפט את תרצה, שהפכה אותו לאדם נסבל וסובלני הרבה יותר ממה שהיה.
 
 בסך הכל אבא הוא עוד אדם מבוהל מהחיים האלה, ועל כך, לא אאשים אף אחד.
 
@@ -8767,6 +8777,37 @@ Error message and password prompt
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
 </div>
+<div created="20170612182534470" modified="20170617142742972" title="אחיות לחושן">
+<pre>[img[pictures/achayot-la-choshen.jpg]]
+
+!!![[יויו]]:
+
+
+אם לקחת בחשבון שכולם נולדו מכולם, אז כולם כוהנים, ולא בקטע של דת, כי מבחינתי דת היא לא פקטור.
+
+אני זכר יהודי, כי נולדתי זכר יהודי. שם הבתולין של סבתי היה כ&quot;ץ, ככה שברשמי זורמת בדמי כוהנות, אך פרט לאלה, כולנו [[אחיות לחושן|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%A9%D7%9F]], אנושות אחת, ללא הבדלים, [[ולא בקטע של סמלים|imagine]], ולא לעולם חוסן.
+
+</pre>
+</div>
+<div created="20170616194246231" modified="20170617195022104" tags="[[סיפורים אמיתיים]]" title="אימא מהאגדות">
+<pre>[img[pictures/ima-mehaagadot.jpg]]
+
+!!![[אנג'ליק]]:
+
+כמו שיש סוגים של כפות ידיים או סוגים של גפיים, כך גם יש סוגים של אימהות. סוג האם שקיבלתי, הוא אימא ביולוגית אמנם, אך שבפועל מתנהגת כאם החורגת מהאגדות.
+
+זו אם, שלא זקוקה לתפוח. היא יורה מילים מורעלות, ומבטים מלאי רעל דרך קבע. עליך להישמע להוראותיה, ואף להבין את הקוד האתי הפנימי שלה, שמשתנה באופן כאוטי ולא אתי.
+
+לפעמים, היא פתאום מחייכת, ומעמידה פנים שהיא חשבה עלייך. אסור לא לחייך אליה בחזרה כשזה קורה. הבעת מורת רוח אינה בא בחשבון. 
+
+בעזרת קוד ששתלה באבי, בי ובשתי אחיותי - כך שנפחד תמיד, ושתמיד נתבייש ונחוש בושה - היא מפרידה ומניעה את כולנו כבובנאי. גם כשהתגוררתי רחוק מבית הורי, או בתקופות בהן לא הייתי בקשר איתם - היא הצליחה להפעיל אותי וגם כעת, לאחר שחשבתי  זמן מה, שאבי הוא חבר שלי, לאחר שסלחתי ויצאתי מגדרי,  לבי נשבר ומתּי. 
+
+
+
+
+
+</pre>
+</div>
 <div created="20170505164125282" modified="20170505175818962" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
 
@@ -8838,7 +8879,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170401233133830" modified="20170417190451286" tags="[[אחות כהן]]" title="איריס הבת">
+<div created="20170401233133830" modified="20170610184830979" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="איריס הבת">
 <pre>[img[pictures/iris-habat.jpg]]
 
 !!![[גורה]]:
@@ -8906,14 +8947,14 @@ Error message and password prompt
 נפרדתי לבסוף מאלה, היה מתיש, היא פעם אחת, כשנסעתי להוריי, שברה חצי בית ואת פנים הקרוון כדי שלא אוכל למכור אותו. היא המשיכה עוד לקלל ולאיים אך לא חששתי מפניה יותר. עד עכשיו אני יכול לפעמים לראות הדהודים של הנביחות שלה, רק הפה מסמן תנועות נביחה אבל אין סאונד. בסוף זה עבר. זה עלה כסף אבל זה עבר. גרתי קצת אצל ההורים ואחר כך נדדתי תקופה בין חברים, לא הייתי מסוגל לעבוד עדיין, לקח לי עוד כמעט שנה עד שהתחלתי לחזור לתפקוד. ידעתי שאני לא רוצה לעבוד באולפנים יותר אבל הייתי חייב להתפרנס ולא ידעתי מה אני רוצה. עבדתי רק כמה שהייתי חייב. גורה השתחררה. עבדה בקייטרינג בתור ברמנית. הייתה מרוצה. תיקנה בגרויות ועשתה פסיכומטרי. זה מה שהיה עד לפני ארבע חמש שנים, משהו כזה. 
 </pre>
 </div>
-<div created="20170331205112322" modified="20170417190708618" tags="[[אחות כהן]]" title="אלכסנדרה">
+<div created="20170331205112322" modified="20170612152618236" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
 <pre>[img[pictures/alexandra.jpg]]
 
 !!![[גורה]]:
 
-ביתה הבכורה של [[ז'נבייב]]. היא בת עשרים ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
+ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20170328195137638" modified="20170522202413268" tags="[[אחות כהן]]" title="אלפרד">
+<div created="20170328195137638" modified="20170616151050257" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
@@ -8922,7 +8963,7 @@ Error message and password prompt
 
 הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, [[אמנו נפטרה|יויו וגורה]], דןדן ואני נסענו להודו להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
 
-הוא חכם, כשרוני, חרוץ, סקרן, לא מכיר בערך עצמו, ואין לו מושג כמה שהוא חתיך.
+הוא חכם, כשרוני, חרוץ, סקרן, לא מכיר בערך עצמו, כולל שאין לו מושג כמה שהוא חתיך.
 
 
 
@@ -8932,10 +8973,16 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20170424215148847" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20170617143001014" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
-ג'ינג'ית יפה וירוקת עיניים שהגיעה אלינו דרך [[אלפרד]], איתו למדה את הקורס ל [[כירולוגיה פסיכודיאגנוסטית]].</pre>
+!!![[אירי]]:
+
+אנג'ליק היא הג'ינג'ית היפה וירוקת העיניים שהגיעה אלינו עם [[אלפרד]] [[לארוחת הכריסמס|ארוחת כריסמס]]. הם הכירו בקורס ל [[כירולוגיה פסיכודיאגנוסטית]].
+
+היא עדינה מאד ורגישה, אבל גם ראיתי אותה מתעצבנת. היא מטפלת בתנועה, היא בת 32 ויש לה אבא, [[אימא|אימא מהאגדות]], ושתי אחיות.
+
+</pre>
 </div>
 <div created="20170327150319064" modified="20170417190601284" tags="[[אחות כהן]]" title="אנה">
 <pre>[img[pictures/JcnhaFI7DwaT9664.jpg]]
@@ -9052,7 +9099,7 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170608171917990" title="בחוות החיות">
+<div created="20170425194155286" modified="20170612161513206" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9406,7 +9453,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170523142244320" title="דפני אברואה">
+<div created="20170225205632304" modified="20170610184745764" tags="[[ילדים חד הוריים]]" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
@@ -9492,12 +9539,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
 </div>
-<div created="20170505224151892" modified="20170608160422430" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
+<div created="20170505224151892" modified="20170611194758514" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
 
 !!![[יויו]]:
 
-כשהדוד הגיע אלינו, די מהר, [[הכל התחיל להסתדר במקום|https://thedod.github.io/]]. 
+כש[[הדוד|https://thedod.github.io#עברית]] הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
 
 </pre>
 </div>
@@ -10382,6 +10429,30 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170610184436279" modified="20170616155408348" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<pre>[img[pictures/yeladim-chad.jpg]]
+
+!!![[ראשל]]:
+
+אני לומדת בבית ספר לאומנויות, אני תלמידת י&quot;א ומתמקדת בוידאו.
+
+המורה החדשה שלנו לתולדות האומנות, נתנה לנו משימה.
+
+היינו צריכים להביא יצירה שאהבנו במיוחד, מכל תחום שהוא.
+
+אני הבאתי את [[מישל גונדרי]] ויצירתו, [[אלפרד]] הכיר לי אותו , וממש התאהבתי באיך שהוא מראה דברים, אבל זה לא העיקר.
+
+העיקר עבורי היה לשמוע את הסיפורים של הילדים בכיתה. [[זה|https://www.youtube.com/watch?v=aCs1rkAXZ9o]] לא הסיפור שלי, אבל זו הייתה מנה מספקת של כאב, לראות את [[אימא|ז'נבייב]] סובלת מאבא. 
+
+אני זוכרת את אימא בוכה על הספה לפני וגם אחרי הגירושים, אבל אחרי הגירושים זה כבר היה אחרת.
+
+ההורים שלי נפרדו כשהייתי בת 11. סבא, אביה של אימי, נפטר שנתיים קודם, ואימא כבר הודתה בפני, שרק אחרי שסבי נפטר העזה להתגרש.
+אבא שלי הוא לא כייף. הפסקתי להיפגש איתו כשמלאו לי 14, ומאז אני גם בטיפול פסיכולוגי. אני לא יודעת מתי ואם אפגש איתו, אך  לעת עתה אני פשוט לא מעוניינת לראות אותו. 
+
+הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש אי אלו כתפיים נעימות, עליהן אני יכולה להניח את ראשי [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
+
+&lt;&lt;list-links filter:&quot;[tag[ילדים חד הוריים]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20161030110441328" modified="20170507181607179" tags="HH" title="ים טתיס">
 <pre>[img[pictures/tethys-sea.jpg]]
@@ -11268,6 +11339,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170614165341450" modified="20170616153550020" tags="[[אחיות חוץ]]" title="מישל גונדרי">
+<pre>[img[pictures/michel-gondry.jpg]]
+
+!!![[ראשל]]:
+
+[[זה|https://www.youtube.com/watch?v=fTH71AAxXmM]] וידאו קליפ [[שמישל|http://www.imdb.com/name/nm0327273/]] עשה.
+
+[[אלפרד]] הכיר לי אותו.
+
+ראינו את [[מדעי החלום|http://www.imdb.com/title/tt0354899/]], והתאהבתי. ראיתי אחר כך במשך כמה ימים כל מה השגתי בעזרת [[המקלדת|מקלדת]]. 
+
+
+</pre>
+</div>
 <div created="20170409072116141" modified="20170412203328914" tags="[[מתכוני ארוחת הכריסמס]]" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
@@ -11378,7 +11463,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מצפה ראשית, או בקיצור, [[מיצפרש]], הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
-<div created="20170223175057546" modified="20170509211134770" title="מקלדת">
+<div created="20170223175057546" modified="20170616144350803" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
 
 !!![[גורה]]:
@@ -11466,6 +11551,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170612161528805" modified="20170612195323786" title="נאמני הגנזך">
+<pre>[img[pictures/neemaney.jpg]]
+
+!!![[יויו]]:
+
+תכלס, נאמני הגנזך, זה עדיין רק גורה ואני.
+
+מה שכן, כולנו [[אחיות לחושן]].
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[נאמני הגנזך]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170112193700442" modified="20170608171108983" tags="[[משפחת באומן]]" title="נדיה">
 <pre>[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
@@ -12189,7 +12288,7 @@ __אופן ההכנה____
 
 שם יויו דיבר עם [[אווה|אווה כהן]] בפעם הראשונה.</pre>
 </div>
-<div created="20170411134035592" modified="20170412203318720" tags="[[מתכוני ארוחת הכריסמס]]" title="פחזניות ממולאות בכבד קצוץ">
+<div created="20170411134035592" modified="20170616194959744" tags="[[מתכוני ארוחת הכריסמס]]" title="פחזניות ממולאות בכבד קצוץ">
 <pre>[img[pictures/pachzaniyot.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12197,12 +12296,12 @@ __אופן ההכנה____
 
 כבד קצוץ:
 
-* מבשלים ארבע ביצים קשות ולאחר שמוכנות קולפים אותן ומניחים בצד..
-* במחבת כבדה וחמה צולים חצי קילוגרם כבד עוף נקי. בשלב הראשון  צולים ללא כל שומן, וכעבור מספר דקות של צלייה משני הצדדים, מוסיפים 25 גרם, וממשיכים עד - מבחינתי - שאין דם.
-* מעבירים את הכבדים לקערה, ובאותה המחבת מוסיפים עשרה גרם חמאה ומטגנים את הבצלים עד הזהבתם.
+* מבשלים ארבע ביצים קשות ולאחר שהן מוכנות קולפים אותן ומניחים בצד.
+* במחבת כבדה וחמה צולים חצי קילוגרם כבד עוף נקיים. בשלב הראשון  צולים ללא כל שומן, וכעבור מספר דקות של צלייה משני הצדדים, מוסיפים 25 גרם מהחמאה, וממשיכים עד - מבחינתי - שאין דם.
+* מעבירים את הכבדים לקערה, ולאותה המחבת מוסיפים עשרה גרם חמאה בה את הבצלים על להבה נמוכה עד הזהבתם.
 * במכונת בשר טוחנים את הכבד המוכן, הבצל והביצים הקשות. מתבלים במלח גס ופלפל שחור גרוס ושומרים במקרר.
 
-*** אם אין ברשותכם מכונת בשר אפשר לטחון (בפולסים עדינים) במעבד מזון, או לחתוך בסכין חדה.
+*** אם אין ברשותכם מכונת בשר אפשר לטחון (בפולסים עדינים) במעבד מזון, או לקצוץ בסכין חדה.
 
 
 
@@ -12227,8 +12326,7 @@ __אופן ההכנה____
 
 חיבור:
 
-כשהפחזניות מוכנות ומצוננות חותכים כל אחת מהן לרוחבה וממלאים בכבד קצוץ. אוכלים מיד או אורזי
-ם ושומרים במקרר עד להגשה.
+כשהפחזניות מוכנות ומצוננות חותכים כל אחת מהן לרוחבה וממלאים בכבד קצוץ. אוכלים מיד או אורזים ושומרים במקרר עד להגשה.
 
 מגישים אותן עם [[חזרת]].
 
@@ -12532,12 +12630,12 @@ Fapina''
 
 הם גרים בקיבוץ בערבה והיא מתפרנסת מאריגת שטיחים צבעוניים, על נולים ענקיים, מרצועות טריקו צבעוניות.</pre>
 </div>
-<div created="20170401150113960" modified="20170417190727791" tags="[[אחות כהן]]" title="ראשל">
+<div created="20170401150113960" modified="20170612152446776" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
 <pre>[img[pictures/rachel.jpg]]
 
 !!![[גורה]]:
 
-ראשל היא בתה הצעירה של [[ז'נבייב]], היא תיכוניסטית במגמת אומנות פלסטית, והיא ג'וקרית אמיתית.</pre>
+ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.</pre>
 </div>
 <div created="20161115145921007" modified="20170417190658722" tags="[[אחות כהן]]" title="רוז'ה">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
@@ -12811,8 +12909,10 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161219172718131" modified="20170507181804901" tags="HH" title="שואה">
-<pre>[img[pictures/MNqllZNTJjGIjZGO.png]]
+<div created="20161219172718131" modified="20170611194427231" tags="HH" title="שואה">
+<pre>&lt;blockquote&gt;&quot;אם נהיה מספיק מרוכזים, לא תהא שואה שלישית&quot; &amp;mdash; [[הדוד|הדוד האמיתי]]&lt;/blockquote&gt;
+
+[img[pictures/MNqllZNTJjGIjZGO.png]]
 
 שואה ותקומה בכרטיס אחד
 
@@ -13090,8 +13190,10 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 &lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170504194252766" modified="20170505161130429" title="imagine">
+<div created="20170504194252766" modified="20170612200916674" title="imagine">
 <pre>[img[pictures/imagine.jpg]]
+
+!!![[האחיות כהן]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
