--- a/index.html
+++ b/index.html
@@ -8789,7 +8789,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170616194246231" modified="20170617195022104" tags="[[סיפורים אמיתיים]]" title="אימא מהאגדות">
+<div created="20170616194246231" modified="20170618000151513" tags="[[סיפורים אמיתיים]]" title="אימא מהאגדות">
 <pre>[img[pictures/ima-mehaagadot.jpg]]
 
 !!![[אנג'ליק]]:
@@ -8798,9 +8798,9 @@ Error message and password prompt
 
 זו אם, שלא זקוקה לתפוח. היא יורה מילים מורעלות, ומבטים מלאי רעל דרך קבע. עליך להישמע להוראותיה, ואף להבין את הקוד האתי הפנימי שלה, שמשתנה באופן כאוטי ולא אתי.
 
-לפעמים, היא פתאום מחייכת, ומעמידה פנים שהיא חשבה עלייך. אסור לא לחייך אליה בחזרה כשזה קורה. הבעת מורת רוח אינה בא בחשבון. 
+לפעמים, היא פתאום מחייכת, ומעמידה פנים שהיא חשבה עלייך. אסור לא לחייך אליה בחזרה כשזה קורה. הבעת מורת רוח לא באה בחשבון. 
 
-בעזרת קוד ששתלה באבי, בי ובשתי אחיותי - כך שנפחד תמיד, ושתמיד נתבייש ונחוש בושה - היא מפרידה ומניעה את כולנו כבובנאי. גם כשהתגוררתי רחוק מבית הורי, או בתקופות בהן לא הייתי בקשר איתם - היא הצליחה להפעיל אותי וגם כעת, לאחר שחשבתי  זמן מה, שאבי הוא חבר שלי, לאחר שסלחתי ויצאתי מגדרי,  לבי נשבר ומתּי. 
+בעזרת הקוד ששתלה באבי, בי ובשתי אחיותי - כך שנפחד תמיד, ושתמיד נתבייש ונחוש אשם - היא מפרידה ומניעה את כולנו כבובנאי. גם כשהתגוררתי רחוק מבית הורי, או בתקופות בהן לא הייתי בקשר איתם - היא הצליחה להפעיל אותי וגם כעת, לאחר שחשבתי  זמן מה, שאבי הוא חבר שלי, לאחר שסלחתי ויצאתי מגדרי,  לבי נשבר ומתּי. 
 
 
 
