גואן יין וגואן אופנה

--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>אשת העסקים</li>
 
+<li>בבוקר</li>
+
 <li>בחוות החיות</li>
 
 <li>בית האננס ההוואי של אירי</li>
@@ -300,6 +302,8 @@ Error message and password prompt
 <li>גבר פריבילגי</li>
 
 <li>גבריאל פורה</li>
+
+<li>גואן אופנה</li>
 
 <li>גואן יין</li>
 
@@ -8366,8 +8370,9 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2060%2030%22%20width%3D%221200%22%20height%3D%22600%22%3E%0A%3CclipPath%20id%3D%22t%22%3E%0A%09%3Cpath%20d%3D%22M30%2C15%20h30%20v15%20z%20v15%20h-30%20z%20h-30%20v-15%20z%20v-15%20h30%20z%22%2F%3E%0A%3C%2FclipPath%3E%0A%3Cpath%20d%3D%22M0%2C0%20v30%20h60%20v-30%20z%22%20fill%3D%22%2300247d%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20stroke%3D%22%23fff%22%20stroke-width%3D%226%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20clip-path%3D%22url(%23t)%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%224%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23fff%22%20stroke-width%3D%2210%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%226%22%2F%3E%0A%3C%2Fsvg%3E%0A&quot;,
-            &quot;title&quot;: &quot;Untitled&quot;
+            &quot;title&quot;: &quot;Untitled&quot;,
+            &quot;text&quot;: &quot;https://en.wikipedia.org/wiki/Pain_aux_raisins&quot;,
+            &quot;type&quot;: &quot;text/plain&quot;
         }
     }
 }</pre>
@@ -8478,7 +8483,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אימא מהאגדות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[גואן יין]] [[גואן אופנה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8498,7 +8503,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170616195858867" title="$:/temp/search">
+<div created="20161023184814872" modified="20170618182935667" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8777,13 +8782,13 @@ Error message and password prompt
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
 </div>
-<div created="20170612182534470" modified="20170617142742972" title="אחיות לחושן">
+<div created="20170612182534470" modified="20170618120702254" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
 
 
-אם לקחת בחשבון שכולם נולדו מכולם, אז כולם כוהנים, ולא בקטע של דת, כי מבחינתי דת היא לא פקטור.
+אם לקחת בחשבון שכולם נולדו מכולם, אז כולם גם כוהנים, ולא בקטע של דת, כי מבחינתי דת היא לא פקטור.
 
 אני זכר יהודי, כי נולדתי זכר יהודי. שם הבתולין של סבתי היה כ&quot;ץ, ככה שברשמי זורמת בדמי כוהנות, אך פרט לאלה, כולנו [[אחיות לחושן|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%A9%D7%9F]], אנושות אחת, ללא הבדלים, [[ולא בקטע של סמלים|imagine]], ולא לעולם חוסן.
 
@@ -9099,6 +9104,14 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
+<div created="20170618162529875" modified="20170618180610681" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
+<pre>[img[pictures/genevieve-aruchat-boker.jpg]]
+
+!!![[ז'נבייב]]:
+
+אם קורה שאני לא אוכלת בבוקר קרואסון כלשהו ושותה קפה, אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
+</pre>
+</div>
 <div created="20170425194155286" modified="20170612161513206" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
@@ -9200,16 +9213,37 @@ Error message and password prompt
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170324140400308" modified="20170424213754317" tags="[[אחות כהן]]" title="גואן יין">
+<div created="20170619141108783" modified="20170619190825691" tags="[[סיפורים אמיתיים]]" title="גואן אופנה">
+<pre>[img[pictures/guen-inn-mitpara.jpg]]
+
+!!![[גואן יין]]:
+
+אצלינו בקבוצה של [[הסינים]], דואגים שהילדים יקבלו השכלה גבוהה, וירכשו מקצוע יאה. אמי היא תופרת מלומדת וכשרונית. וידיה היו תמיד מלאות בעבודה. כשהייתי בת עשר אבי נפטר לפתע. ונשארנו שתינו. בסוף בית הספר היסודי אמנם רציתי רק ג'ינס, אך היא כעסה, כי מבחינתה רכישת בגדים הייתה מעשה שלא יעשה.
+
+היא תפרה לי בגדים יפהפיים. בגיל צעיר כבר ידעתי מה אני רוצה ללבוש - והיא הלכה איתי תמיד, אך בין גיל 13 ל-17 בערך, הייתי מהילדים האלה, שלובשים רק שחור ומלא תכשיטים מכסף, ומכסים את הפנים עם השערות. אימא שלי הייתה הרוגה מזה. היא לא ידעה איך להתמודד עם זה מול השכנות. היא כל-כך התביישה.
+
+אני כמובן גם, בקושי דיברתי איתה, ורק כעסתי ונזפתי בה. טוב קרו עוד כל מיני דברים, כמו שתמיד קורים כל מיני דברים, אך קצת אחרי גיל 17, אני ממש זוכרת את הפייד אאוט הזה של השחור, שפתאום התחילו לרוץ לי הצבעים בראש, וכל הזמן התחברו לי בדים שונים עם דוגמאות שונות בכל מיני גזרות.
+
+התחלתי לתפור, אספתי את השיער, חזרתי לחייך. אימי הייתה מאושרת.
+
+שנתיים אחרי התיכון למדתי עיצוב אופנה באקדמיה, עבדתי בכמה בתי אופנה, ולפני ארבע שנים פתחתי את &quot;גואן אופנה&quot;.
+
+אמי מנהלת את העבודה. אנחנו גוזרות יחדיו, ומעסיקות שלוש נשים. 
+
+הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, שהחיים לא קלים.
+
+</pre>
+</div>
+<div created="20170324140400308" modified="20170619190948234" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
 
 !!![[גורה]]:
 
 גואן-יין, היא סינית קטנה ומתוקה, שהגיע אלינו עם חמשת [[הסינים]] המופלאים.
 
-היא מעצבת אופנה, ויש לה חנות בסן-ז'רמן, שם היא מעצבת ותופרת דגמים קלאסיים עם טאצ' אישי שלה.
+היא מעצבת אופנה, ויש לה [[סדנה|גואן אופנה]] וחנות, שם היא מעצבת ותופרת גזרות קלסיות עם הכוון שלה. יש לי כמה חצאיות שלה, שאני לובשת המון, וז'קט שכל חלק שלו עשוי מבד אחר, והוא סופר שיק.
 
-בחנות שלה היא מעסיקה כמה נשים סיניות עליהן  מפקדת אימה, שבצעירותה הוכשרה כתופרת בסין.
+בחנות שלה היא מעסיקה כמה נשים עליהן מפקדת אימה, שבצעירותה הוכשרה כתופרת בסין.
 
 גם היא אחת מבני המזל שגדלו יחדיו בקבוצה, שהגיע מסין בשנות השבעים, והייתה בת כיתה של חמשת מיודעינו, וגם היא באפס זמן הפכה [[לאחת מאיתנו|האחיות כהן]].
 
@@ -9810,7 +9844,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20170523232441696" title="הסינים">
+<div created="20161112205825183" modified="20170618190223939" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
 
 !!![[גורה]]:
@@ -9820,7 +9854,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 חמישה גברים בתחילת שנות השלושים לחייהם. חמישתם נולדו למשפחות מהגרים שהגיעו לפריז כקבוצה בתחילת שנות העשרים לחייהם [[מהאנגג'ואו|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%A0%D7%92%D7%92%27%D7%95%D7%90%D7%95]].
 
 
-הם (חמישתם), גדלו יחדיו, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את [[כריסמס האחרון|ארוחת כריסמס]].
+הם (חמישתם), גדלו יחדיו ברובע ה-17, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את [[כריסמס האחרון|ארוחת כריסמס]].
 
 את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך ז'נבייב, דרכה הגענו [[לדירה|הדירה]].
 
@@ -10225,7 +10259,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161112221314170" modified="20170514230829528" tags="[[אחות כהן]]" title="ז'נבייב">
+<div created="20161112221314170" modified="20170618163433454" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
 המתוקה''
@@ -10249,7 +10283,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הם יכולים לתת מצג שוא, אך חתול מפוקח לא יעשה זאת.
 
-היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
+היא חתולה יפה שמשפחתה היגרה ממרוקו [[לפריז|בבוקר]].
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
@@ -10430,7 +10464,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20170616155408348" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20170618122644349" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -10450,7 +10484,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ההורים שלי נפרדו כשהייתי בת 11. סבא, אביה של אימי, נפטר שנתיים קודם, ואימא כבר הודתה בפני, שרק אחרי שסבי נפטר העזה להתגרש.
 אבא שלי הוא לא כייף. הפסקתי להיפגש איתו כשמלאו לי 14, ומאז אני גם בטיפול פסיכולוגי. אני לא יודעת מתי ואם אפגש איתו, אך  לעת עתה אני פשוט לא מעוניינת לראות אותו. 
 
-הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש אי אלו כתפיים נעימות, עליהן אני יכולה להניח את ראשי [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
+הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש  כתפיים, עליהן אפשר להניח את הראש [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
 
 &lt;&lt;list-links filter:&quot;[tag[ילדים חד הוריים]]&quot;&gt;&gt;</pre>
 </div>
